# MultiStage-RAG

./: README.md  pyproject.toml  requirements.txt  setup.py  安装指南说明.md  扩展使用说明.md  架构设计.md  项目结构说明.md
configs/: default_config.yaml
examples/: basic_usage.py  config_example.yaml
src/multistage_rag/: __init__.py
src/multistage_rag/api/: app.py  schemas.py
src/multistage_rag/api/routers/: __init__.py  manage.py  monitor.py  retrieve.py
src/multistage_rag/components/: __init__.py  base.py  factory.py
src/multistage_rag/components/cache/: __init__.py  base.py  factory.py  memory_cache.py  null_cache.py  redis_cache.py
src/multistage_rag/components/llm/: __init__.py  base.py  factory.py  openai_llm.py  qwen_llm.py
src/multistage_rag/components/reranker/: __init__.py  bailian_reranker.py  base.py  bge_reranker.py  factory.py
src/multistage_rag/components/rule_engine/: __init__.py  authority_rule.py  base.py  factory.py  keyword_rule.py  length_rule.py  recency_rule.py  rule_engine.py
src/multistage_rag/components/vector_store/: __init__.py  base.py  chroma_store.py  factory.py  faiss_store.py
src/multistage_rag/config/: __init__.py  config_manager.py  schema.py
src/multistage_rag/core/: __init__.py  models.py  pipeline.py  retriever.py
src/multistage_rag/stages/: __init__.py  base.py  pre_rank.py  re_rank.py  recall.py
src/multistage_rag/utils/: __init__.py  bm25.py  logger.py  metrics.py  validator.py
